compiler/tests/en/errors/default_arg_order.salam
// EXPECT: E064
func bad(a i32 = 1, b i32):
    ret a + b
end

func main:
    println(bad(2, 3))
end
